[gd_scene load_steps=4 format=3 uid="uid://c4ig045lt1p47"]

[ext_resource type="Texture2D" uid="uid://d3rt76vy54j8w" path="res://Assets/Static/Buffs/buff_fire_rate.png" id="1_856if"]
[ext_resource type="Script" path="res://Scripts/buffs/boosting_buff.gd" id="1_v0fjv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8wuq"]

[node name="BoostingBuff" type="Area2D"]
position = Vector2(10, 10)
collision_layer = 8
collision_mask = 4
script = ExtResource("1_v0fjv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e8wuq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.19209e-07, -9.53674e-07)
scale = Vector2(1.53846, 1.33333)
texture = ExtResource("1_856if")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
